tags tpl, card wordwrap, page top margin fix

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -1,3 +1,6 @@
 .usa-card__container__borderless {
   border: none;
 }
+.usa-card__container {
+  word-break: break-word;
+}
